hphp/hack/test/typecheck/reactive/vararg_mutable1.php
<?hh // partial

class A {}

<<__Rx>>
function f(<<__Mutable>> A ...$a): void {
}
